fix: speakes.html card description single and multiple lines align

--- a/blocks/photo-card/__description/photo-card__description.css
+++ b/blocks/photo-card/__description/photo-card__description.css
@@ -2,4 +2,6 @@
   padding: 20px;
   display: flex;
   flex-flow: column;
+  justify-content: space-between;
+  min-height: 120px;
 }
