--- a/blocks/photo-card/__job/photo-card__job.css
+++ b/blocks/photo-card/__job/photo-card__job.css
@@ -3,5 +3,5 @@
   font-size: 16px;
   font-weight: 300;
   line-height: 1.5;
-  margin-bottom: 20px;
+  flex: 1 0 auto;
 }
